nasl-sys/src/ast.rs


#[link(name = "nasl", kind = "dylib")]
extern {
    pub fn init_nasl_library(arg1: *mut lex_ctxt);
    pub fn add_nasl_library(arg1: *mut *mut GSList);
    pub fn nasl_verify_signature(
        arg1: *const c_char,
        arg2: *const c_char,
        arg3: usize,
    ) -> c_int;
    pub fn nasl_is_leaf(arg1: *const tree_cell) -> c_int;
    pub fn get_line_nb(arg1: *const tree_cell) -> *mut c_char;
    pub fn nasl_dump_tree(arg1: *const tree_cell);
    pub fn ref_cell(arg1: *mut tree_cell);
    pub fn deref_cell(arg1: *mut tree_cell);
    pub fn nasl_type_name(arg1: c_int) -> *const c_char;
    pub fn cell_type(arg1: *const tree_cell) -> c_int;
    pub fn dump_cell_val(arg1: *const tree_cell) -> *mut c_char;
    pub fn alloc_tree_cell() -> *mut tree_cell;
    pub fn alloc_expr_cell(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut tree_cell,
        arg4: *mut tree_cell,
    ) -> *mut tree_cell;
    pub fn alloc_RE_cell(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut tree_cell,
        arg4: *mut c_char,
    ) -> *mut tree_cell;
    pub fn alloc_typed_cell(arg1: c_int) -> *mut tree_cell;
    pub fn dup_cell(arg1: *const tree_cell) -> *mut tree_cell;
    pub fn nasl_affect(arg1: *mut tree_cell, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn clear_unnamed_var(arg1: *mut anon_nasl_var);
    pub fn var2str(arg1: *const anon_nasl_var) -> *const c_char;
    pub fn nasl_get_var_by_num(
        arg1: *mut c_void,
        arg2: *mut nasl_array,
        arg3: c_int,
        arg4: c_int,
    ) -> *mut anon_nasl_var;
    pub fn nasl_array_iterator(
        arg1: *mut c_void,
        arg2: *mut tree_cell,
    ) -> nasl_iterator;
    pub fn nasl_iterate_array(arg1: *mut nasl_iterator) -> *mut tree_cell;
    pub fn add_var_to_list(
        arg1: *mut nasl_array,
        arg2: c_int,
        arg3: *const anon_nasl_var,
    ) -> c_int;
    pub fn add_var_to_array(
        arg1: *mut nasl_array,
        arg2: *mut c_char,
        arg3: *const anon_nasl_var,
    ) -> c_int;
    pub fn array_max_index(arg1: *mut nasl_array) -> c_int;
    pub fn free_array(arg1: *mut nasl_array);
    pub fn copy_ref_array(arg1: *const tree_cell) -> *mut tree_cell;
    pub fn hash_str2(
        arg1: *const c_char,
        arg2: c_int,
    ) -> c_int;
    pub fn var2cell(arg1: *mut anon_nasl_var) -> *mut tree_cell;
    pub fn make_array_from_elems(arg1: *mut tree_cell) -> *mut tree_cell;
    pub fn array2str(arg1: *const nasl_array) -> *mut c_char;
    pub fn func_is_internal(arg1: *const c_char) -> *mut nasl_func;
    pub fn free_func(arg1: *mut nasl_func);
    pub fn init_empty_lex_ctxt() -> *mut lex_ctxt;
    pub fn free_lex_ctxt(arg1: *mut lex_ctxt);
    pub fn dump_ctxt(arg1: *mut lex_ctxt);
    pub fn get_func_ref_by_name(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
    ) -> *mut nasl_func;
    pub fn decl_nasl_func(
        arg1: *mut lex_ctxt,
        arg2: *mut tree_cell,
        arg3: c_int,
    ) -> *mut tree_cell;
    pub fn insert_nasl_func(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
        arg3: *mut tree_cell,
        arg4: c_int,
    ) -> *mut nasl_func;
    pub fn nasl_func_call(
        arg1: *mut lex_ctxt,
        arg2: *const nasl_func,
        arg3: *mut tree_cell,
    ) -> *mut tree_cell;
    pub fn get_variable_by_name(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
    ) -> *mut tree_cell;
    pub fn get_array_elem(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
        arg3: *mut tree_cell,
    ) -> *mut tree_cell;
    pub fn add_numbered_var_to_ctxt(
        arg1: *mut lex_ctxt,
        arg2: c_int,
        arg3: *mut tree_cell,
    ) -> *mut anon_nasl_var;
    pub fn add_named_var_to_ctxt(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
        arg3: *mut tree_cell,
    ) -> *mut named_nasl_var;
    pub fn nasl_read_var_ref(arg1: *mut lex_ctxt, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn nasl_incr_variable(
        arg1: *mut lex_ctxt,
        arg2: *mut tree_cell,
        arg3: c_int,
        arg4: c_int,
    ) -> *mut tree_cell;
    pub fn nasl_return(arg1: *mut lex_ctxt, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn decl_local_variables(arg1: *mut lex_ctxt, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn decl_global_variables(arg1: *mut lex_ctxt, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn cell2atom(arg1: *mut lex_ctxt, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn get_int_var_by_num(
        arg1: *mut lex_ctxt,
        arg2: c_int,
        arg3: c_int,
    ) -> c_long;
    pub fn get_str_var_by_num(
        arg1: *mut lex_ctxt,
        arg2: c_int,
    ) -> *mut c_char;
    pub fn get_int_var_by_name(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
        arg3: c_int,
    ) -> c_long;
    pub fn get_str_var_by_name(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
    ) -> *mut c_char;
    pub fn get_var_size_by_name(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
    ) -> c_int;
    pub fn get_var_type_by_name(
        arg1: *mut lex_ctxt,
        arg2: *const c_char,
    ) -> c_int;
    pub fn get_var_size_by_num(
        arg1: *mut lex_ctxt,
        arg2: c_int,
    ) -> c_int;
    pub fn get_var_type_by_num(
        arg1: *mut lex_ctxt,
        arg2: c_int,
    ) -> c_int;
    pub fn nasl_perror(arg1: *mut lex_ctxt, arg2: *mut c_char, ...);
    pub fn nasl_trace(arg1: *mut lex_ctxt, arg2: *mut c_char, ...);
    pub fn nasl_trace_enabled() -> c_int;
    pub fn nasl_set_filename(arg1: *const c_char);
    pub fn nasl_set_function_filename(arg1: *const c_char);
    pub fn nasl_get_filename(arg1: *const c_char) -> *const c_char;
    pub fn nasl_set_function_name(arg1: *const c_char);
    pub fn nasl_get_function_name() -> *const c_char;
    pub fn plugin_run_find_service(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn plugin_run_openvas_tcp_scanner(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn plugin_run_synscan(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn plugin_run_nmap(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_exec(arg1: *mut lex_ctxt, arg2: *mut tree_cell) -> *mut tree_cell;
    pub fn cell_cmp(
        arg1: *mut lex_ctxt,
        arg2: *mut tree_cell,
        arg3: *mut tree_cell,
    ) -> c_long;
    pub fn init_nasl_ctx(
        arg1: *mut naslctxt,
        arg2: *const c_char,
    ) -> c_int;
    pub fn nasl_clean_ctx(arg1: *mut naslctxt);
    pub fn script_timeout(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_oid(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_cve_id(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_bugtraq_id(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_xref(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_tag(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_name(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_version(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_copyright(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_category(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_family(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_dependencies(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_require_keys(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_mandatory_keys(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_exclude_keys(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_require_ports(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_require_udp_ports(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_preference(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_add_preference(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_get_preference(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_get_preference_file_content(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn script_get_preference_file_location(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn safe_checks(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn scan_phase(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn network_targets(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_script_oid(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_kb_item(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_kb_list(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_kb_item(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn replace_kb_item(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn security_message(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn log_message(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn error_message(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_scanner_get_port(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_scanner_add_port(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_scanner_status(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_vendor_version(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn generate_script_signature(arg1: *mut c_char) -> c_int;
    pub fn nasl_cert_open(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_cert_close(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_cert_query(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_md2(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_md4(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_md5(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_sha(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_sha1(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_sha256(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ripemd160(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_md2(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_md5(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_sha1(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_sha256(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_sha384(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_sha512(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_dss(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hmac_ripemd160(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_prf_sha256(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_prf_sha384(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_tls1_prf(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ntlmv1_hash(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_nt_owf_gen(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_lm_owf_gen(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ntv2_owf_gen(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ntlmv2_hash(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ntlmv2_response(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ntlm2_response(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ntlm_response(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_keyexchg(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_insert_hexzeros(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_password(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_sign(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_smb2_sign(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_cipher_des(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_bn_random(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_dh_generate_key(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_bn_cmp(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_dh_compute_key(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rsa_public_encrypt(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rsa_private_decrypt(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rsa_public_decrypt(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_bf_cbc_encrypt(arg1: *mut lex_ctxt) -> *mut tree_cell;
